[package]
name = "dwx"
version = "0.1.0"
edition = "2024"
description = "Data Walk eXtended"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
anyhow = "1.0.104"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive"] }
crossterm = { version = "0.29", features = [
    "events",
    "use-dev-tty",
    "bracketed-paste",
] }
ignore = "0.4.30"
regex = "1.13.1"
similar = "3.1.1"
syntect = "5.3.0"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
